[gd_scene load_steps=30 format=3 uid="uid://dsmy2h1upfevb"]

[ext_resource type="Script" path="res://scenes/objects/scale_green/scale_logic.gd" id="1_rceiw"]
[ext_resource type="Texture2D" uid="uid://crb5d0df5ycud" path="res://assets/objects/scale_signal_button.png" id="3_2mu4u"]
[ext_resource type="Texture2D" uid="uid://bi2502gafrhdn" path="res://assets/objects/scale_animated.png" id="4_eavbj"]
[ext_resource type="Texture2D" uid="uid://cb4mf5pn8mjwh" path="res://assets/lights/nRmVV (2).png" id="4_esb06"]
[ext_resource type="Shader" path="res://scenes/shaders/Particle.gdshader" id="5_k7c00"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_gsyot"]
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_l5l5o"]
atlas = ExtResource("3_2mu4u")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi26j"]
atlas = ExtResource("3_2mu4u")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uttp5"]
atlas = ExtResource("3_2mu4u")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghkj6"]
atlas = ExtResource("3_2mu4u")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xxt4"]
atlas = ExtResource("3_2mu4u")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm0jf"]
atlas = ExtResource("3_2mu4u")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwa1b"]
atlas = ExtResource("3_2mu4u")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkevh"]
atlas = ExtResource("3_2mu4u")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_23dy3"]
atlas = ExtResource("3_2mu4u")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3qbo"]
atlas = ExtResource("3_2mu4u")
region = Rect2(768, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_pyojx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5l5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi26j")
}],
"loop": true,
"name": &"CORRECT",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uttp5")
}],
"loop": true,
"name": &"OFF",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghkj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xxt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm0jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwa1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkevh")
}],
"loop": true,
"name": &"ON",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_23dy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3qbo")
}],
"loop": true,
"name": &"OVER",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8nime"]
atlas = ExtResource("4_eavbj")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbfek"]
atlas = ExtResource("4_eavbj")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_teg5k"]
atlas = ExtResource("4_eavbj")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_t11oe"]
atlas = ExtResource("4_eavbj")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_f25jm"]
atlas = ExtResource("4_eavbj")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_10ava"]
atlas = ExtResource("4_eavbj")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mdba"]
atlas = ExtResource("4_eavbj")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2opxw"]
atlas = ExtResource("4_eavbj")
region = Rect2(288, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_q45co"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nime")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbfek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teg5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t11oe")
}],
"loop": false,
"name": &"depresssed",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f25jm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10ava")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mdba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2opxw")
}],
"loop": false,
"name": &"pressed",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mdtrr"]
size = Vector2(96, 47)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tg2qi"]
shader = ExtResource("5_k7c00")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_byh63"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 20.03
initial_velocity_min = -200.0
initial_velocity_max = 200.0
angular_velocity_min = 350.27
angular_velocity_max = 350.27
gravity = Vector3(0, 980, 0)
scale_max = 3.0
color = Color(2, 2, 1, 1)

[node name="Scale_button_green" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_rceiw")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-23.0667, -85)
scale = Vector2(0.919271, 0.666667)
color = Color(0.235294, 1, 0.235294, 1)
energy = 0.5
texture = ExtResource("4_esb06")
texture_scale = 0.8

[node name="anim_flag" type="AnimatedSprite2D" parent="."]
material = SubResource("CanvasItemMaterial_gsyot")
position = Vector2(0, -48)
sprite_frames = SubResource("SpriteFrames_pyojx")
animation = &"OFF"
frame_progress = 0.564916

[node name="anim" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -31)
sprite_frames = SubResource("SpriteFrames_q45co")
animation = &"depresssed"
autoplay = "depresssed"
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -24.5)
shape = SubResource("RectangleShape2D_mdtrr")

[node name="CPUParticles2D" type="GPUParticles2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_tg2qi")
position = Vector2(-22, -84)
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_byh63")
one_shot = true
explosiveness = 1.0
fixed_fps = 0
draw_order = 0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
